<resources>
    <string name="app_name">footprint</string>
    <string name="facebook_app_id">2657864001154104</string>
    <string name="fb_login_protocol_scheme">fb2657864001154104</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>
    <string name="send">Send</string>
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <string name="back">Back</string>
    <string name="add_footprint">add footprint</string>
    <string name="find_footprint">find footprint</string>
    <string name="footprint_menu">FOOTPRINT MENU</string>
    <string name="near_footprint">near footprint</string>
    <string name="my_diary">my diary</string>
    <string name="goods">goods</string>
    <string name="profile_picture">profile picture</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_cannot_be_empty">Nickname cannot be empty</string>
    <string name="please_enter_your_e_mail">Please enter your e-mail</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_password_again">please enter your password again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearest_footprint_xxm">Nearest Footprint XXm</string>
    <string name="recommend">recommend</string>
    <string name="report">report</string>
    <string name="title">Title</string>
    <string name="enter_a_title">enter a title</string>
    <string name="photos_or_videos">Photos or Videos</string>
    <string name="location">Location</string>
    <string name="location_will_be_added_automatically">location will be added automatically</string>
    <string name="content">Content</string>
    <string name="enter_a_content">enter a content</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="login_by_email_account">login by email account</string>
    <string name="login_by_other_email_account">login by other email account</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="setting">setting</string>
    <string name="account_info">account info</string>
    <string name="modify_info">modify info</string>
    <string name="change_account">change account 계정 변경</string>
    <string name="withdrawal_account">withdrawal account</string>
    <string name="account_setting">Account Setting</string>
    <string name="large_text">
    <string name="control_name">UI in AR</string>
    <string name="arcore_not_installed">Please install ARCore</string>
    <string name="arcore_not_updated">Please update ARCore</string>
    <string name="app_not_updated">Please update this app</string>
    <string name="arcore_not_supported">This device does not support AR</string>
    <string name="camera_and_location_permission_request">Location and Camera permissions are needed to use this feature</string>
    <string name="loading_message">Loading your current location...</string>
    <string name="login_footprint_starttext">Footprint를 시작합니다</string>
    <string name="login_footprint_loginplease_text">사용중인 계정이 있다면\n사용하는 계정으로 로그인해 주세요</string>
    <string name="login_footprint_hint_email">Email</string>
    <string name="login_foorprint_hint_password">Password</string>
    <string name="login_footprint_btn_login">입력한 계정으로 로그인</string>
    <string name="login_footprint_btn_signnew">계정이 없으신가요? 새로 만들기</string>
    <string name="userenter_footprint_signup_text">SIGN UP</string>
    <string name="userenter_footprint_nickname_edit">8자 이하의 닉네임을 입력하세요</string>
    <string name="userenter_footprint_email_edit">이메일을 입력하세요</string>
    <string name="userenter_footprint_password_edit">비밀번호를 입력하세요</string>
    <string name="userenter_footprint_password_again">비밀번호를 다시 한 번 입력하세요</string>
    <string name="main_foortprint_menu_home">MENU HOME</string>
    <string name="main_footprint_welcome">Welcome to Footprint</string>
    <string name="main_footprint_addfoot">발자취 등록</string>
    <string name="main_footprint_findfoot">발자취 찾기</string>
    <string name="main_footprint_nearfoot">내 주변 발자취</string>
    <string name="main_footprint_diary">다이어리</string>
    <string name="main_footprint_setting">설정</string>
    <string name="map_footprint_footlist">발자취 리스트 보기</string>
    <string name="setting_footprint_appinfo">앱 정보</string>
    <string name="setting_footprint_modifyinfo">프로필 수정</string>
    <string name="setting_footprint_change">계정 변경</string>
    <string name="setting_footprint_location">위치 정보 설정</string>
    <string name="setting_footprint_report">계정 신고</string>
    <string name="setting_footprint_licence">라이선스</string>
    <string name="setting_footprint_contact">문의하기</string>
    <string name="setting_footprint_logout">로그아웃</string>
    <string name="setting_footprint_withdraw">계정 탈퇴</string>
</resources>