<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/app_info"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_appinfo"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/modify_info"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_modifyinfo"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/change_account"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_change"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/set_location_info"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_location"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/account_report"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_report"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/licence"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_licence"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/contact_us"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_contact"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/log_out"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_logout"
                android:gravity="start|center_vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="1dp"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/withdraw_account"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00FF0000"
                android:text="@string/setting_footprint_withdraw"
                android:gravity="start|center_vertical" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>