<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/menu_text_welcome"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:text="@string/main_foortprint_menu_home"
        android:textStyle="bold"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/menu_text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/menu_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/main_footprint_welcome"
        android:textSize="16sp" />

    <GridLayout
        android:id="@+id/main_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/menu_text_welcome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:orientation="horizontal"
        android:columnCount="2"
        android:layout_margin="16dp">

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/add_footprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="0"
            android:layout_margin="4dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_columnWeight="6">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:id="@+id/ic_menu_addfoot"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_menu_addfoot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_menu_addfoot"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_footprint_addfoot"
                    android:textStyle="bold"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/find_footprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="1"
            android:layout_rowSpan="2"
            android:layout_margin="4dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_columnWeight="2"
            android:layout_rowWeight="10">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:id="@+id/ic_menu_findfoot"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_menu_findfoot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_menu_findfoot"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_footprint_findfoot"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/near_footprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="0"
            android:layout_margin="4dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_columnWeight="6">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:id="@+id/ic_menu_nearfoot"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_menu_aroundfoot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_menu_nearfoot"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_footprint_nearfoot"
                    android:textStyle="bold"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/my_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="1"
            android:layout_margin="4dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_columnWeight="6">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/ic_menu_diary"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_menu_diary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_menu_diary"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_footprint_diary"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="2"
            android:layout_margin="4dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_columnWeight="2">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:id="@+id/ic_menu_setting"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_menu_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_menu_setting"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_footprint_setting"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




